# lindep

./: .env.example  .gitignore  COCKPIT_V3_PLAN.md  Cargo.toml  README.md
docs/: ARCHITECTURE.md  ENG-392-pty-spike-verdict.md  UX-AUDIT.md
src/: app.rs  backend.rs  demo.rs  event.rs  key_setup.rs  keymap.rs  layout.rs  ledger.rs  linear.rs  main.rs  mirror.rs  model.rs  notify.rs  onboard.rs  picker.rs  projects.rs  registry.rs  scratch.rs  session.rs  supervisor.rs  theme.rs  ui.rs  window.rs  workspace.rs  worktree.rs
